Revision history for Perl extension Net::IDN::Encode

	- use updated IdnaTest.txt from Unicode 7.0.0 database
	  FIXES: #96749: Fails with bleadperl

2.201 (2014-08-30)
	- correct handling of uppercase a-labels in
	  domain_to_{ascii,unicode}
	- FIXES: #98354: Capitalized ACE prefix does not work (reported
	  by victor@*****.ru)

2.200 (2014-06-21)
	- Net::IDN::UTS46: update to Unicode® 7.0.0 and UTS #46 r13
	- typo and metadata fixes from dstreinbrunner

2.100 (2013-12-30)
	- Net::IDN::Encode: preserve case in pure-ASCII labels (bypass
	  en-/decoding) 
	  FIXES: #91059: case not preserved (reported by DMUEY)
	- Net::IDN::Encode: simplify scalar-via-blob syntax (pull req.
	  by DMUEY)
	- Net::IDN::Encode: add SMALL COMMERCIAL AT to list of possible
	  @ signs (pull req. by DMUEY)

	- Net::IDN::UTS46: update to Unicode® 6.3.0 and UTS #46 r11:
	  * new UTS #46 test vectors in data/IdnaTest.txt 
	  * built on perl-blead (5.19.7) for support of Unicode® 6.3.0
	    in tests generated from data/IdnaTest.txt
	  * tweaks and fixes regarding edge cases not clearly described
	    in UTS #46
	- Net::IDN::UTS46: test vectors supposed to fail due to
	  Unassigned characters are no longer skipped.

	- Net::IDN::Punycode: use utf8_to_uvchr_buf instead of deprecated
	  utf8_to_uvuni (perl 5.15.9 and higher; utf8_to_uvuni_buf is
	  deprecated from perl 5.19.5)

2.005 (2013-11-03)
	- better documentation for unassigned characters,
	  FIXES: #89750: Can't create IDN for a special domain
	  (reported by felix.*****@*****.de)
	- FIXES: #89270: [PATCH] fix spelling errors in the docs
	  (reported by cstamas@*****.hu)

2.004 (2013-08-12)
	- FIXES: #85552 3 uts46 tests FAIL under perl-5.18.0	
	  (reported by d.thomas@*****.au)

2.003 (2012-01-22)
	- FIXES required version of Unicode::Normalize in UTS46.pm
	  (reported by CPAN testers)

2.002 (2012-01-18)
	- FIXES dependencies/required perl version
	- FIXES: #74021 Makefile.PL bad value for
	  version-requirement

2.001 (2012-01-12)