@@ -2,6 +2,7 @@ Revision history for Perl extension Net::IDN::Encode
 
 	- use updated IdnaTest.txt from Unicode 7.0.0 database
 	  FIXES: #96749: Fails with bleadperl
+	- documentation updates, point to perl Unicode tutorials
 
 2.201 (2014-08-30)
 	- correct handling of uppercase a-labels in
